tests/baselines/reference/ambientWithStatements.errors.txt
==== tests/cases/compiler/ambientWithStatements.ts (15 errors) ====
    declare module M {
        break;
        ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        continue;
        ~~~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        debugger;
        ~~~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        do { } while (true);
        ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        var x;
        for (x in null) { }
        ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
                  ~~~~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
        if (true) { } else { }
        ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        1;
        ~
!!! error TS1036: Statements are not allowed in ambient contexts.
        L: var y;
        ~
!!! error TS1036: Statements are not allowed in ambient contexts.
        return;
        ~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        switch (x) {
        ~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
            case 1:
                break;
            default:
                break;
        }
        throw "nooo";
        ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        try {
        ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        }
        catch (e) {
        }
        finally {
        }
        with (x) {
        ~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
              ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
        }
    }